--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
     </div>
 
     <!-- navication bar -->
-    <nav class="navbar">
+    <nav class="navbar" id="nav-menu">
         <div class="max-width">
             <div class="logo"><a href="#">Port<span>Folio</span></a></div>
             <ul class="menu">
-                <li><a href="#home" class="menu-btn">Home</a></li>
-                <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#services" class="menu-btn">Skills</a></li>
-                <li><a href="#skills" class="menu-btn">Tech Stacks</a></li>
-                <li><a href="#project" class="menu-btn">Projects</a></li>
-                <li><a href="#contact" class="menu-btn">Contact</a></li>
+                <li><a href="#home" class="menu-btn nav-link">Home</a></li>
+                <li><a href="#about" class="menu-btn nav-link">About</a></li>
+                <li><a href="#services" class="menu-btn nav-link">Skills</a></li>
+                <li><a href="#skills" class="menu-btn nav-link">Tech Stacks</a></li>
+                <li><a href="#project" class="menu-btn nav-link">Projects</a></li>
+                <li><a href="#contact" class="menu-btn nav-link">Contact</a></li>
                 <!-- update resume -->
-                <li><a href="images/Pragatheeswaran S_New-2.0.pdf" class="menu-btn" id="nav-resume" download="">Resume</a></li>
+                <li><a href="images/Pragatheeswaran S_New-2.0.pdf" class="menu-btn nav-link" id="nav-resume" download="">Resume</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -58,7 +58,7 @@
     </section>
 
    <!-- about section start -->
-  <section class="about" id="about">
+  <section class="about section" id="about">
     <div class="max-width">
       <h2 class="title">About me</h2>
       <div class="about-content">
