--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
-    <title>Pragathees | Portfolio </title>
+    <title>Portfolio_Pragathees </title>
     <link rel="icon" type="image/x-icon" href="/images/iconprofile.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
@@ -242,78 +242,47 @@
             </div>
           </div>
         </div>
-        <!-- <div class="card">
+        <div class="card">
           <div class="box">
-            <img src="images/headphonezone.png" alt="">
-            <div class="text">(Frontend)HEADPHONEZONE CLONE</div>
-            <p><span id="tech">About : </span>Headphonezone is India's finest online store for the world's best headphones.This is a Front-end Clone of Headphonezone website which is developed in a span of 5 days all by myself.</p>
-            <p class="techStack"><span id="tech">Tech Used:</span> Html, CSS, JavaScript, GitHub and VSCode. </p>
+            <img src="images/epic-1.png" alt="">
+            <div class="text project-title"> Epic Collection</div>
+            <p class="project-description"> <span id="tech">About : </span>This app is a online fashion cloth selling sit in United States and this is clone of Aeropostale. This application allows to buy fashion cloth. I have completed this project in 5 days only</p>
+            <p class="techStack project-tech-stack"><span id="tech">Tech Used:</span>Html, CSS, JavaScript, Bootstrap, express.js, mongodb</p>
             <div class="repo-links">
               <div class="repo-div">
-                <span> <a href="https://github.com/Shubhambhadouria/Headphonezone-clone" target="_blank"> Git Repo </a></span>
+                <span class="project-github-link"> <a href="https://github.com/Prags1709/wiggly-bucket-6915" target="_blank"> Git Repo </a></span>
               </div>
               <div class="demo-div">
-                <span> <a href="https://magenta-pastelito-ac6e18.netlify.app/" target="_blank"> Live Site </a></span>
+                <span class="project-deployed-link"> <a href="https://idyllic-duckanoo-75fda1.netlify.app/" target="_blank"> Live Site </a></span>
               </div>
             </div>
           </div>
-        </div> -->
-        <!-- <div class="card">
-                    <div class="box">
-                        <img src="./images/per_portfolio.png" alt="">
-                        <div class="text">Personal website</div>
-                        <p>This my first project of Personal Website I make this when I was beginner </p>
-                        <p class="techStack">Tech Used: Html, CSS, SCSS , JavaScript</p>
-                        <div class="repo-links">
-                            <div class="repo-div">
-                                <span>  <a href="https://github.com/codeirax/portfolio" target="_blank"> Git Repo </a></span>
-                            </div>
-                            <div class="demo-div">
-                                <span> <a href="https://codeirax.github.io/portfolio/" target="_blank">  Live Site  </a></span>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-
-        <!-- next project adding -->
-        <!-- <div class="card">
-                <div class="box">
-                    <img src="./images/rest_api.png" alt="">
-                    <div class="text">Online Wallet Application </div>
-                    <p>Building REST API's for wallet application which can be use by the Customer for different services. </p>
-                    <p class="techStack">Tech Used: Java, Springboot, mySQL ,JPA-Hibernate </p>
-                    <div class="repo-links">
-                        <div class="repo-div">
-                            <span>  <a href="https://github.com/codeirax/wallet-project" target="_blank"> Git Repo </a></span>
-                        </div>
-                        <div class="demo-div">
-                            <span> <a href="http://localhost:8088/swagger-ui/#/" target="_blank">  Live Site  </a></span>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-
-
+        </div>
       </div>
     </div>
   </section>
 
      <!-- github status -->
-    <section id="githubCal" id="github-streak-stats" >
-        <div id="gitHead">
-            <h1>GitHub Calendar</h1>
+  <section>
+    <div id="stats">
+      <h2 class="title">Github Stats</h2>
+        <div>
+          <img  id="github-top-langs" src="https://github-readme-stats.vercel.app/api/top-langs/?username=Prags1709&lans-count=4&show_icons=true&theme=radical" alt="">
+          
+          <div id="statsimg">
+          <img id="github-stats-card" src="https://github-readme-stats.vercel.app/api?username=Prags1709&show_icons=true&theme=radical" alt="">
+          <img  id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com?user=Prags1709&show_icons=true&theme=radical" alt="">
         </div>
-        <div class="calendar" id="github-stats-card" id="github-top-langs">
+    </div>
+  </div>
+    <div id="calendar">
+        <h2 style="color: black; font-family: Poppins, sans-serif; text-align: center;"; class="calci">Github Calendar</h2>
+        <div  class="react-activity-calendar calendar">
             <!-- Loading stuff -->
             Loading the data just for you.
         </div>
-        
-        <script>
-            GitHubCalendar(".calendar", "Prags1709");
-            // or enable responsive functionality
-            GitHubCalendar(".calendar", "Prags1709", { responsive: true });
-        </script>
-    </section>
+    </div>
+  </section>
 
     <!-- contact section start -->
   <section class="contact" id="contact">
