--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="home-b-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2" id="user-detail-name">Pragatheeswaran S</div>
-                <div class="text-3" id="user-detail-intro">And I'm a <span class="typing"></span></div>
+                <div class="text-3" >And I'm a <span class="typing"></span></div>
             </div>
         </div>
         <section class="space">
@@ -74,7 +74,7 @@
           <img class="home-img" src="./images/profile.jpg" alt="">
         </div>
         <div class="column right">
-          <div class="text">I'm Pragathees and I'm a <span class="typing-2"></span></div>
+          <div class="text" id="user-detail-intro">I'm Pragathees and I'm a <span class="typing-2"></span></div>
           <p>Aspiring full-stack web developer at Masai school experience
             all skills to work on web development projects. Motivated and
             passionate about learning new things. Looking forward to
@@ -124,7 +124,7 @@
 
     <!-- skills section start -->
   <section class="skill-s" id="skills">
-    <div class="max-width">
+    <div class="max-width skills-card">
       <h2 class="title">Tech Stack</h2>
         <div class="skill-s-content" style="padding-bottom: -01%;">
 
@@ -190,11 +190,11 @@
   </section>
 
     <!-- project section start -->
-  <section class="project" id="project">
+  <section class="project" id="projects">
     <div class="max-width">
       <h2 class="title">Projects</h2>
       <div class="carousel owl-carousel">
-        <div class="card">
+        <div class="card project-card">
           <div class="box">
             <img src="images/epic-1.png" alt="">
             <div class="text project-title"> Epic Collection</div>
@@ -210,7 +210,7 @@
             </div>
           </div>
         </div>
-        <div class="card">
+        <div class="card project-card">
           <div class="box">
             <img src="images/epic-2.png" alt="">
             <div class="text project-title"> Epic Collection</div>
@@ -226,7 +226,7 @@
             </div>
           </div>
         </div>
-        <div class="card">
+        <div class="card project-card">
           <div class="box">
             <img src="images/epic-3.png">
             <div class="text project-title"> Epic Collection</div>
@@ -242,7 +242,7 @@
             </div>
           </div>
         </div>
-        <div class="card">
+        <div class="card project-card">
           <div class="box">
             <img src="images/epic-1.png" alt="">
             <div class="text project-title"> Epic Collection</div>
@@ -290,8 +290,8 @@
       <h2 class="title">Contact me</h2>
       <div class="contact-content">
         <div class="column left">
-          <div class="text">Get in Touch</div>
-          <p>Got a project? Reach out and let's work together on something exciting. Big or small. web.</p>
+          <div class="text"><h2 style="color: #00a2e2;">Have an idea?</h2></div>
+          <p  class="text">Let's Connect!!</p><span><img width="100px" src="https://raw.githubusercontent.com/ShahriarShafin/ShahriarShafin/main/Assets/handshake.gif" alt="logo"></span>
           <div class="icons">
             <div class="row">
               <a href="mailto:prags1709@gmail.com"> <i class="fas fa-envelope"></i> </a>
@@ -356,7 +356,7 @@
 
     <!-- footer section start -->
     <footer>
-        
+        <p>© 2022 Developed by Pragatheeswaran</p>
     </footer>
 
     <script src="script.js"></script>
