--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a href="#about" class="menu-btn nav-link about">About</a></li>
                 <li><a href="#services" class="menu-btn nav-link skills">Skills</a></li>
                 <li><a href="#skills" class="menu-btn nav-link">Tech Stacks</a></li>
-                <li><a href="#project" class="menu-btn nav-link projects">Projects</a></li>
+                <li><a href="#projects" class="menu-btn nav-link projects">Projects</a></li>
                 <li><a href="#contact" class="menu-btn nav-link contact">Contact</a></li>
                 <!-- update resume -->
                 <li id="resume-button-1"><a href="images/Pragatheeswaran S_New-2.0.pdf" class="menu-btn nav-link resume" id="resume-link-1" download="">Resume</a></li>
