--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             <img class="home-img" src="./images/profile.jpg" alt="">
           </div>
           <div class="column right">
-            <div class="text" id="user-detail-intro">I'm Pragathees and I'm a <span class="typing-2"></span></div>
-            <p>Aspiring full-stack web developer at Masai school experience
+            <div class="text" >I'm Pragathees and I'm a <span class="typing-2"></span></div>
+            <p id="user-detail-intro">Aspiring full-stack web developer at Masai school experience
               all skills to work on web development projects. Motivated and
               passionate about learning new things. Looking forward to
               working in a company that provides growth opportunities in
@@ -297,15 +297,10 @@
     <div id="stats">
       <h2 class="title">Github Stats</h2>
       <div>
-        <img id="github-top-langs"
-          src="https://github-readme-stats.vercel.app/api/top-langs/?username=Prags1709&lans-count=4&show_icons=true&theme=radical"
-          alt="">
-
+        <img id="github-top-langs" src="https://github-readme-stats.vercel.app/api/top-langs/?username=Prags1709&lans-count=4&show_icons=true&theme=radical" alt="language">
         <div id="statsimg">
-          <img id="github-stats-card"
-            src="https://github-readme-stats.vercel.app/api?username=Prags1709&show_icons=true&theme=radical" alt="">
-          <img id="github-streak-stats"
-            src="https://github-readme-streak-stats.herokuapp.com?user=Prags1709&show_icons=true&theme=radical" alt="">
+          <img id="github-stats-card" src="https://github-readme-stats.vercel.app/api?username=Prags1709&show_icons=true&theme=radical" alt="stats">
+          <img id="github-streak-stats" src="https://github-readme-streak-stats.herokuapp.com?user=Prags1709&show_icons=true&theme=radical" alt="stats">
         </div>
       </div>
     </div>
