--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <div class="column right">
             <div class="text" >I'm Pragathees and I'm a <span class="typing-2"></span></div>
             <p id="user-detail-intro">Aspiring full-stack web developer at Masai school experience
-              all skills to work on web development projects. Motivated and
+              all skills to work on web development projects using JavaScript, Node.js, Express.js, MongoDB, HTML, CSS. Motivated and
               passionate about learning new things. Looking forward to
               working in a company that provides growth opportunities in
               career.
