--- a/index.html
+++ b/index.html
@@ -37,7 +37,19 @@
           <li><a href="#projects" class="menu-btn nav-link projects">Projects</a></li>
           <li><a href="#contact" class="menu-btn nav-link contact">Contact</a></li>
           <!-- update resume -->
-          <li><a href="images/Pragatheeswaran S_New-2.0.pdf" class="menu-btn nav-link resume" id="resume-button-1" download="">Resume</a></li>
+          <!-- <li><a id="resume-button-1" href="images/Pragatheeswaran S_New-2.0.pdf" class="menu-btn nav-link resume" download>Resume</a></li> -->
+          <li>
+            <!-- <button id="resume-button-1" class="menu-btn nav-link resume" onclick="resume()" style="background-color: rgba(255, 255, 255, 0.5)">
+              <a href="Pragatheeswaran S_New-2.0.pdf" id="resume-link-1"  download="Pragatheeswaran S_New-2.0.pdf">
+                Resume
+              </a>
+          </button> -->
+            <button id="resume-button-1" class="nav-link resume" onclick="resume()">
+              <a href="Pragatheeswaran S_New-2.0.pdf" id="resume-link-1" download="Pragatheeswaran S_New-2.0.pdf">
+                  Resume
+              </a>
+          </button>
+          </li>
         </ul>
         <div class="menu-btn">
           <i class="fas fa-bars"></i>
@@ -86,7 +98,18 @@
 
             </p>
             <div>
-              <a href="images/Pragatheeswaran S_New-2.0.pdf" id="resume-button-2" download="">Download CV</a>
+              <!-- <a href="Pragatheeswaran S_New-2.0.pdf" id="resume-button-2" download="">Download CV</a> -->
+              <!-- style="background-color: rgba(255, 255, 255, 0.5)" -->
+              <!-- <button id="resume-button-1" class="menu-btn nav-link resume" onclick="resume()" >
+                <a href="Pragatheeswaran S_New-2.0.pdf" id="resume-link-1"  download="Pragatheeswaran S_New-2.0.pdf">
+                  Resume
+                </a>
+            </button> -->
+              <button id="resume-button-1" class="nav-link resume" onclick="resume()">
+                <a href="Pragatheeswaran S_New-2.0.pdf" id="resume-link-1" download="Pragatheeswaran S_New-2.0.pdf">
+                    Resume
+                </a>
+            </button>
             </div>
           </div>
         </div>
