--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 Resume
               </a>
           </button> -->
-            <button id="resume-button-1" class="nav-link resume" onclick="resume()">
+            <button style="background-color: transparent;border: none;font-family: Ubuntu, sans-serif;" id="resume-button-1" class="nav-link resume" onclick="resume()">
               <a href="Pragatheeswaran S_New-2.0.pdf" id="resume-link-1" download="Pragatheeswaran S_New-2.0.pdf">
                   Resume
               </a>
@@ -64,10 +64,6 @@
           <div class="text-1">Hello, my name is</div>
           <div class="text-2" id="user-detail-name">Pragatheeswaran S</div>
           <div class="text-3">And I'm a <span class="typing"></span></div>
-          <button onclick="resume()"  id="resume-button-2" >
-            <a id="resume-link-2" href="Pragatheeswaran S_New-2.0.pdf" target="_blank" download="Pragatheeswaran S_New-2.0.pdf">
-           Resume </a>
-       </button>
         </div>
       </div>
       <section class="space">
@@ -109,12 +105,16 @@
                   Resume
                 </a>
             </button> -->
-            
+
               <!-- <button id="resume-button-1" class="nav-link resume" onclick="resume()">
                 <a href="Pragatheeswaran S_New-2.0.pdf" id="resume-link-1" download="Pragatheeswaran S_New-2.0.pdf">
                     Resume
                 </a>
             </button> -->
+                <button style="background-color: transparent;border: none;" onclick="resume()"  id="resume-button-2" >
+                  <a id="resume-link-2" href="Pragatheeswaran S_New-2.0.pdf" target="_blank" download="Pragatheeswaran S_New-2.0.pdf">
+                  Resume </a>
+                </button>
             </div>
           </div>
         </div>
