--- a/index.html
+++ b/index.html
@@ -176,18 +176,8 @@
             </div>
             <div></div>
             <div>
-              <img class="skills-card-img" src="./skill-logo/express.png" alt="">
-              <p class="skills-card-name">Express</p>
-            </div>
-            <div></div>
-            <div>
-              <img class="skills-card-img" src="./skill-logo/nodejs.png" alt="">
-              <p class="skills-card-name">nodeJS</p>
-            </div>
-            <div></div>
-            <div>
-              <img class="skills-card-img" src="./skill-logo/mongodb.png" alt="">
-              <p class="skills-card-name">mongodb</p>
+              <img class="skills-card-img" src="./skill-logo/react.png" alt="">
+              <p class="skills-card-name">React</p>
             </div>
             <div></div>
             <div>
@@ -196,8 +186,38 @@
             </div>
             <div></div>
             <div>
+              <img class="skills-card-img" src="./skill-logo/express.png" alt="">
+              <p class="skills-card-name">Express.js</p>
+            </div>
+            <div></div>
+            <div>
+              <img class="skills-card-img" src="./skill-logo/nodejs.png" alt="">
+              <p class="skills-card-name">nodeJS</p>
+            </div>
+            <div></div>
+            <div>
               <img class="skills-card-img" src="./skill-logo/socket.png" alt="">
               <p class="skills-card-name">Socket.io</p>
+            </div>
+            <div></div>
+            <div>
+              <img class="skills-card-img" src="./skill-logo/mongodb.png" alt="">
+              <p class="skills-card-name">mongodb</p>
+            </div>
+            <div></div>
+            <div>
+              <img class="skills-card-img" src="./skill-logo/mysql.png" alt="">
+              <p class="skills-card-name">mySQL</p>
+            </div>
+            <div></div>
+            <div>
+              <img class="skills-card-img" src="./skill-logo/redis.png" alt="">
+              <p class="skills-card-name">Redis</p>
+            </div>
+            <div></div>
+            <div>
+              <img class="skills-card-img" src="./skill-logo/aws.png" alt="">
+              <p class="skills-card-name">AWS</p>
             </div>
             <div></div>
             <div>
@@ -206,8 +226,8 @@
             </div>
             <div></div>
             <div>
-              <img class="skills-card-img" src="./skill-logo/aws.png" alt="">
-              <p class="skills-card-name">AWS</p>
+              <img class="skills-card-img" src="./skill-logo/git.png" alt="">
+              <p class="skills-card-name">git</p>
             </div>
             <div></div>
             <div>
@@ -219,7 +239,11 @@
               <img class="skills-card-img" src="./skill-logo/netlify.png" alt="">
               <p class="skills-card-name">Netlify</p>
             </div>
-
+            <div></div>
+            <div>
+              <img class="skills-card-img" src="./skill-logo/npm.png" alt="">
+              <p class="skills-card-name">npm</p>
+            </div>
           </div>
 
         </div>
